fix(master) fixed header position on mobile

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,7 +1,7 @@
 @import '../index.scss';
 
 .header {
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 0;
   max-width: 998px;
@@ -17,4 +17,10 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media screen and (max-width: $mobile) {
+  .headerPhoto {
+    background-position: left;
+  }
 }
